WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29982
REGRESSION (
r47440
): Inserting text in the middle of content in a scrolled textfield results in painting bugs
https://bugs.webkit.org/show_bug.cgi?id=29982
Summary
REGRESSION (r47440): Inserting text in the middle of content in a scrolled te...
Adam Roben (:aroben)
Reported
2009-10-01 14:16:32 PDT
To reproduce: 1. Go to data:text/html,%3Cinput%20value=%22this%20is%20a%20long%20test%20value%20that%20you%20should%20overwrite%20to%20see%20painting%20bugs%22%3E 2. Click in the text field 3. Press the right arrow until the word "this" has scrolled off the left edge of the text field 4. Click just before the "v" in "value" 5. Type a few characters The word "that" starts getting clobbered by the word "value", instead of moving to the right. This happens on both Mac and Windows. It did not happen in Safari 4.0.3.
Attachments
Reduction not involving form controls
(174 bytes, text/html)
2009-10-05 14:47 PDT
,
mitz
no flags
Details
Fix
(21.31 KB, patch)
2009-10-05 16:00 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2009-10-01 14:16:58 PDT
<
rdar://problem/7269108
>
mitz
Comment 2
2009-10-02 21:04:55 PDT
Caused by <
http://trac.webkit.org/changeset/47440
>.
mitz
Comment 3
2009-10-05 14:47:38 PDT
Created
attachment 40664
[details]
Reduction not involving form controls
mitz
Comment 4
2009-10-05 16:00:30 PDT
Created
attachment 40671
[details]
Fix
mitz
Comment 5
2009-10-05 16:37:44 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/49131
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug