REGRESSION (r47440): Inserting text in the middle of content in a scrolled textfield results in painting bugs <rdar://problem/7269108> https://bugs.webkit.org/show_bug.cgi?id=29982

Reviewed by Darin Adler.

WebCore:

Test: fast/repaint/line-in-scrolled-clipped-block.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::layoutBlock): Use the unclipped overflow rect
(including layout overflow) for the repaint rect calculation.

LayoutTests:

* fast/repaint/line-in-scrolled-clipped-block.html: Added.
* platform/mac/fast/repaint/line-in-scrolled-clipped-block-expected.checksum: Added.
* platform/mac/fast/repaint/line-in-scrolled-clipped-block-expected.png: Added.
* platform/mac/fast/repaint/line-in-scrolled-clipped-block-expected.txt: Added.



Canonical link: https://commits.webkit.org/40690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49131 268f45cc-cd09-0410-ab3c-d52691b4dbfc